--- a/divineCraft/package.json
+++ b/divineCraft/package.json
@@ -9,23 +9,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "alea": "^1.0.1",
-    "simplex-noise": "^4.0.1",
+    "@amodx/binary": "latest",
+    "@amodx/controls": "latest",
+    "@amodx/core": "latest",
+    "@amodx/elm": "latest",
+    "@amodx/indexdb": "latest",
+    "@amodx/math": "latest",
+    "@amodx/meshing": "latest",
+    "@amodx/ncs": "latest",
+    "@amodx/rng": "latest",
+    "@amodx/schemas": "latest",
+    "@dvegames/vlox-tools": "latest",
+    "@amodx/threads": "latest",
     "@divinevoxel/vlox": "latest",
     "@divinevoxel/vlox-babylon": "latest",
     "@dvegames/vlox": "latest",
-    "@dvegames/vlox-tools": "latest",
-    "@amodx/elm": "latest",
-    "@amodx/core": "latest",
-    "@amodx/ncs": "latest",
-    "@amodx/rng": "latest",
-    "@amodx/meshing": "latest",
-    "@amodx/math": "latest",
-    "@amodx/binary": "latest",
-    "@amodx/threads": "latest",
-    "@amodx/indexdb": "latest",
-    "@amodx/controls": "latest",
-    "@amodx/schemas": "latest"
+    "alea": "^1.0.1",
+    "simplex-noise": "^4.0.1",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "webpack-cli": "^6.0.1"
+  }
 }
