--- a/divineCraft/package.json
+++ b/divineCraft/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx webpack  serve --mode development --env development  --config webpack.config.dev.cjs  "
+    "start": "npx webpack  serve --mode development --env development  --config webpack.config.dev.cjs",
+    "build": "npx webpack --mode production --config webpack.config.prod.cjs",
+    "deploy": "yarn build && yarn vercel --prod"
   },
   "author": "",
   "license": "ISC",
@@ -19,17 +21,19 @@
     "@amodx/ncs": "latest",
     "@amodx/rng": "latest",
     "@amodx/schemas": "latest",
-    "@dvegames/vlox-tools": "latest",
     "@amodx/threads": "latest",
     "@divinevoxel/vlox": "latest",
     "@divinevoxel/vlox-babylon": "latest",
     "@dvegames/vlox": "latest",
+    "@dvegames/vlox-tools": "latest",
     "alea": "^1.0.1",
+    "gh-pages": "^6.3.0",
     "simplex-noise": "^4.0.1",
     "ts-loader": "^9.5.2",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
+    "vercel": "^40.1.0",
     "webpack-cli": "^6.0.1"
   }
 }
