--- a/divineCraft/package.json
+++ b/divineCraft/package.json
@@ -30,10 +30,11 @@
     "gh-pages": "^6.3.0",
     "simplex-noise": "^4.0.1",
     "ts-loader": "^9.5.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "webpack": "5.97.1"
   },
   "devDependencies": {
     "vercel": "^40.1.0",
-    "webpack-cli": "5.97.1"
+    "webpack-cli": "^6.0.1"
   }
 }
