--- a/divineCraft/package.json
+++ b/divineCraft/package.json
@@ -33,7 +33,9 @@
     "typescript": "^5.7.3"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^5.6.3",
     "vercel": "^40.1.0",
+    "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
   }
 }
