--- a/divineCraft/package.json
+++ b/divineCraft/package.json
@@ -11,6 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babylonjs/core": "^7.34.2",
+    "dat.gui": "^0.7.9",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "@amodx/binary": "latest",
     "@amodx/controls": "latest",
     "@amodx/core": "latest",
@@ -29,13 +33,25 @@
     "alea": "^1.0.1",
     "gh-pages": "^6.3.0",
     "simplex-noise": "^4.0.1",
-    "ts-loader": "^9.5.2",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
     "html-webpack-plugin": "^5.6.3",
+    "tsconfig-paths-webpack-plugin": "^4.2.0",
     "vercel": "^40.1.0",
     "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1"
+    "webpack-cli": "^6.0.1",
+    "@types/dat.gui": "^0.7.13",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@webgpu/types": "^0.1.51",
+    "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
+    "html-loader": "^5.1.0",
+    "postcss-loader": "^8.1.1",
+    "raw-loader": "^4.0.2",
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.2",
+    "webpack-dev-server": "^5.1.0"
   }
 }
