--- a/divineCraft/vercel.json
+++ b/divineCraft/vercel.json
@@ -4,6 +4,9 @@
     ],
     "routes": [
       { "src": "/(.*)", "dest": "/index.html" }
+    ],
+    "redirects": [
+      { "source": "/(.*)", "destination": "/", "statusCode": 200 }
     ]
   }
   
