--- a/divineCraft/vercel.json
+++ b/divineCraft/vercel.json
@@ -1,4 +1,8 @@
 {
+    "public": "public",
+    "routes": [
+      { "src": "/assets/(.*)", "dest": "/assets/$1" }
+    ],
     "headers": [
         {
             "source": "/(.*)",
